# open-source-view

./: CONTRIBUTING.md  README.md  RELEASING.md  TROUBLESHOOTING.md  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/Layout/: PanelContainer.tsx  SearchBar.tsx  Sidebar.tsx  StatusBar.tsx  TopBar.tsx
src/components/Map/: WaldorfMap.tsx
src/components/Map/controls/: LayerPanel.tsx  (+2 more)
src/components/Panels/: AISummary.tsx  AlertsPanel.tsx  CountryDetail.tsx  DebugPanel.tsx  ExportButton.tsx  MarketData.tsx  NewsFeed.tsx  PredictionMarkets.tsx  Settings.tsx  SignalsPanel.tsx  TimelinePanel.tsx  TwitterFeed.tsx
src/constants/: feeds.ts  layers.ts
src/data/: conflictZones.ts  countries.ts  dataCenters.ts  militaryBases.ts  nuclearFacilities.ts  underseaCables.ts
src/hooks/: useAlertEvaluation.ts  useAutoUpdater.ts  useCountryBoundaries.ts  useDataPolling.ts  useEconomicIndicators.ts  useOsintPolling.ts
src/services/: cache.ts  export.ts  proxy.ts  search.ts
src/services/api/: acled.ts  ais.ts  aisstream.ts  aviationstack.ts  firms.ts  gdelt.ts  grok.ts  kalshi.ts  markets.ts  news.ts  opensky.ts  twitter.ts
src/store/: alertStore.ts  annotationStore.ts  mapStore.ts  marketStore.ts  newsStore.ts  panelStore.ts  playbackStore.ts  searchStore.ts  settingsStore.ts  signalFusionStore.ts  timelineStore.ts
src/styles/: globals.css
src/types/: index.ts
(+4 files in other folders)
